--- a/login.html
+++ b/login.html
@@ -33,15 +33,16 @@
     <main>
         <section class="form-section">
             <h2>Log into your account</h2>
-            <form id="loginForm">
-                <label for="loginEmail">Email</label>
-                <input type="email" id="loginEmail" required>
+            <form action="/login" method="POST">
+                <label for="login-email">Email:</label>
+                <input type="email" id="login-email" name="email" required>
 
-                <label for="loginPassword">Password</label>
-                <input type="password" id="loginPassword" required>
+                <label for="login-password">Password:</label>
+                <input type="password" id="login-password" name="password" required>
 
                 <button type="submit">Login</button>
             </form>
+
             <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
         </section>
     </main>
